--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
